fix looking for OSG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,9 @@ else()
 endif()
 if( OPENSCENEGRAPH_LIBRARIES )
 	message(STATUS "OSG libraries: ${OPENSCENEGRAPH_LIBRARIES}")
+	# this custom variable is used other places, this should probably be changed to using OPENSCENEGRAPH_LIBRARIES throughout
+	set(OSG_LIBRARIES ${OPENSCENEGRAPH_LIBRARIES})
 	list(APPEND CMAKE_LIBRARY_PATH ${OPENSCENEGRAPH_LIBRARIES})
-	link_directories(${OPENSCENEGRAPH_LIBRARIES})
 else()
 	message(FATAL_ERROR "Unable to find OpenSceneGraph libraries.")
 endif()
