set CMAKE_LIBRARY_PATH appropriately and use custom CMake variable for OSG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ else()
 endif()
 if ( BULLET_LIBRARIES )
 	message(STATUS "Bullet libraries: ${BULLET_LIBRARIES}")
-	list(APPEND CMAKE_LIBRARY_PATH ${BULLET_LIBRARIES})
+	set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${BULLET_LIBRARIES})
 else()
 	message(FATAL_ERROR "Unable to find Bullet libraries.")
 endif()
@@ -98,9 +98,12 @@ endif()
 
 FIND_PACKAGE( osgWorks 2.0.0 REQUIRED )
 if( osgWorks_FOUND )
-	if( ${osgWorks_USE_FILE} )
-    	include( ${osgWorks_USE_FILE} )
-	endif()
+	include_directories(${osgWorks_INCLUDE_DIRS})
+	set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} ${osgWorks_LIBRARY_DIRS})
+	# this custom variable is used other places, this should be changed to match the Find.cmake file
+	set(OSGWORKS_LIBRARIES ${osgWorks_LIBRARY_DIRS})
+else()
+	message(FATAL_ERROR "Unable to find osgWorks.")
 endif()
 
 
